Update credits on homepage.
Todo:
 - Russian page credits_ru needs translation of new lines.
 - Upload.

--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -5,6 +5,10 @@
     <h3>Hauptentwickler:</h3>
     <table>
         <tr>
+            <td>Thomas Bernhardt</td>
+            <td>Landschaftsdesign und -tests, Filme</td>
+        </tr>
+        <tr>
             <td>Raoul&nbsp;Bourquin</td>
             <td>Landschaftsverwaltung und -design, Homepage, zahlreiche unsch&auml;tzbare Erweiterungen</td>
         </tr>
@@ -31,6 +35,10 @@
         <tr>
             <td>Petr&nbsp;Machata</td>
             <td>Landschaftsdesign, Programmierung</td>
+        </tr>
+        <tr>
+            <td>Nobby</td>
+            <td>Landschaftsdesign und -tests, Auswertung</td>
         </tr>
         <tr>
             <td>Nat&nbsp;Pryce</td>
@@ -89,67 +97,108 @@
             <td>Clifford&nbsp;J.&nbsp;Tasner</td>
             <td>Musik der zweiten Generation, Englisch Korrektur lesen</td>
         </tr>
+        <tr>
+            <td>Micha&#322; Trzebiatowski</td>
+            <td>&Uuml;bersetzungsverwaltung, deutsche und polnische &Uuml;bersetzungen</td>
+        </tr>
+        <tr>
+            <td>Yuriy Zhyromskiy</td>
+            <td>Russische und ukrainische &Uuml;bersetzungen, &Uuml;bersetzung von Handbuch und Homepage ins russische, Slackware-Paket</td>
+        </tr>
     </table>
 
     <h3>Danksagungen</h3>
     <p>F&uuml;r verschiedene kleinere Beitr&auml;ge danken wir:</p>
     <ul>
+        <li>Andreas Abraham&nbsp;&nbsp;&nbsp;(Deutsche &Uuml;bersetzung)</li>
+        <li>Another&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Yannis Anthymidis&nbsp;&nbsp;&nbsp;(Griechische &Uuml;bersetzung)</li>
+        <li>Ash&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Claudio B.&nbsp;&nbsp;&nbsp;(Italienische &Uuml;bersetzung)</li>
         <li>Roberto Bardin&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Thomas Bernhardt&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LdM-Artikel)</li>
         <li>Alain Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign, franz&ouml;sische &Uuml;bersetzung und Handbuch)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Calinou&nbsp;&nbsp;&nbsp;(Franz&ouml;sische &Uuml;bersetzung)</li>
         <li>capkoh&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Dawid&nbsp;&nbsp;&nbsp;(Polnische &Uuml;bersetzung)</li>
         <li>daydreamer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Russische &Uuml;bersetzung)</li>
+        <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Russische und ukrainische &Uuml;bersetzung)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Edward&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Els van Eijk&nbsp;&nbsp;&nbsp;(Niederl&auml;ndische &Uuml;bersetzung)</li>
         <li>Manuel Eisentraut&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Stephanie Fabian&nbsp;&nbsp;&nbsp;(Wertvolle Fehlerberichte)</li>
-        <li>Johann Freymuth&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Johann Freymuth&nbsp;&nbsp;&nbsp;(Landschaftsdesign, wertvolle Fehlerberichte)</li>
+        <li>fri&nbsp;&nbsp;&nbsp;(Tschechische &Uuml;bersetzung)</li>
+        <li>firespin&nbsp;&nbsp;&nbsp;(Griechische &Uuml;bersetzung)</li>
+        <li>Stefan Gagner&nbsp;&nbsp;&nbsp;(Schwedische &Uuml;bersetzung)</li>
         <li>Roberto Garc&iacute;a&nbsp;&nbsp;&nbsp;(Spanische &Uuml;bersetzung)</li>
         <li>Andy Geldmacher&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Edwin Groothuis&nbsp;&nbsp;&nbsp;(FreeBSD Portierung)</li>
+        <li>GunChleoc&nbsp;&nbsp;&nbsp;(Schottisch-g&auml;lische &Uuml;bersetzung)</li>
         <li>Daniel Hadas&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Hairball&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Joe Hansen&nbsp;&nbsp;&nbsp;(D&auml;nische &Uuml;bersetzung)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Zoltan Hopp&aacute;r&nbsp;&nbsp;&nbsp;(Ungarische &Uuml;bersetzung)</li>
+        <li>Tea Horvatic&nbsp;&nbsp;&nbsp;(Kroatische &Uuml;bersetzung)</li>
         <li>Brian Huffman&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Hypocrite&nbsp;&nbsp;&nbsp;(Finnische &Uuml;bersetzung)</li>
+        <li>Icewing&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Ungarische &Uuml;bersetzung)</li>
         <li>Samuele Kaplun&nbsp;&nbsp;&nbsp;(Italienische &Uuml;bersetzung)</li>
+        <li>Ivica Koli&cacute;&nbsp;&nbsp;&nbsp;(Kroatische &Uuml;bersetzung)</li>
         <li>Manuel K&ouml;nig&nbsp;&nbsp;&nbsp;(Landschaftsdesign, Fehlerberichte)</li>
         <li>Jens-Christian Korth&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Johannes Laire&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Joona Laire&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Markus Laire&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Ryan Lerch&nbsp;&nbsp;&nbsp;(AppData-Datei)</li>
+        <li>Christophe Lherieau&nbsp;&nbsp;&nbsp;(Franz&ouml;sische &Uuml;bersetzung)</li>
+        <li>luigif&nbsp;&nbsp;&nbsp;(Italienische &Uuml;bersetzung)</li>
         <li>Dominik Lehmann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Dominik Leipold&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Edward Leuf&nbsp;&nbsp;&nbsp;(Feedback, Fehlerberichte)</li>
+        <li>Lasse Liehu&nbsp;&nbsp;&nbsp;(Finnische &Uuml;bersetzung)</li>
         <li>Ingo van Lil&nbsp;&nbsp;&nbsp;(Feedback, Fehlerberichte)</li>
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Niederl&auml;ndische &Uuml;bersetzung)</li>
+        <li>&#317;uboslava&nbsp;&nbsp;&nbsp;(Slowakische &Uuml;bersetzung)</li>
+        <li>Dzmitry Ludzik&nbsp;&nbsp;&nbsp;(Russische und wei&szlig;russische &Uuml;bersetzungen)</li>
         <li>Lurcane&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Mac OS X Portierung)</li>
+        <li>S&eacute;rgio Marques&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
         <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Englisch Korrektur lesen)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Schwedische &Uuml;bersetzung)</li>
+        <li>Nikola Parsifal&nbsp;&nbsp;&nbsp;(Kroatische &Uuml;bersetzung)</li>
+        <li>Mark&eacute;ta Pecoldov&aacute;&nbsp;&nbsp;&nbsp;(Tschechische &Uuml;bersetzung)</li>
         <li>Andreas Persenius&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Grzegorz Pruchniakowski&nbsp;&nbsp;&nbsp;(Polnische &Uuml;bersetzung)</li>
         <li>Mark Pulley&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>pzykosiz&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Bruno Queiros&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
+        <li>Vincenzo Reale&nbsp;&nbsp;&nbsp;(Italienische &Uuml;bersetzung)</li>
+        <li>Thomas De Rocker&nbsp;&nbsp;&nbsp;(Niederl&auml;ndische &Uuml;bersetzung)</li>
         <li>Rudolf&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Windows Installer und Icon)</li>
         <li>Lukas Sch&uuml;ller&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(RPM specfile)</li>
-        <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Landschaftsdesign, ungarische &Uuml;bersetzung)</li>
+        <li>Gon&ccedil;alo Silva&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
+        <li>Manuela Silva&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Alan Smithee&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Jon Sneyers&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -161,10 +210,11 @@
         <li>Tacvek&nbsp;&nbsp;&nbsp;(Lua 5.1 Upgrade)</li>
         <li>James Taylor&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(.desktop file)</li>
+        <li>Vince38&nbsp;&nbsp;&nbsp;(Franz&ouml;sische &Uuml;bersetzung)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Manual page f&uuml;r Unix)
+        <li>Heikki Ylipaavalniemi&nbsp;&nbsp;&nbsp;(Finnische &Uuml;bersetzung)</li>
+        <li>Francisco Zamorano&nbsp;&nbsp;&nbsp;(Spanische &Uuml;bersetzung)</li>
         <li>Zephyr&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Yuriy Zhyromskiy&nbsp;&nbsp;&nbsp;(Russisches Handbuch und Homepage, Slackware Paket)</li>
-        <li>/dev/null&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
     </ul>
 </div>
