--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -5,6 +5,10 @@
     <h3>Главные разработчики:</h3>
     <table>
         <tr>
+            <td>Thomas Bernhardt</td>
+            <td>Level design and testing, movies</td>
+        </tr>
+        <tr>
             <td>Raoul&nbsp;Bourquin</td>
             <td>Руководство уровнями и дизайн, бесценные дополнения по всем вопросам</td>
         </tr>
@@ -31,6 +35,10 @@
         <tr>
             <td>Petr&nbsp;Machata</td>
             <td>Дизайн уровней, программирование</td>
+        </tr>
+        <tr>
+            <td>Nobby</td>
+            <td>Level design and testing, score evaluation</td>
         </tr>
         <tr>
             <td>Nat&nbsp;Pryce</td>
@@ -89,67 +97,108 @@
             <td>Clifford&nbsp;J.&nbsp;Tasner</td>
             <td>Второе поколение музыки, корректура английских текстов</td>
         </tr>
+        <tr>
+            <td>Micha&#322; Trzebiatowski</td>
+            <td>Translation administration, German and Polish translations</td>
+        </tr>
+        <tr>
+            <td>Юрий Жиромский - Yuriy Zhyromskiy</td>
+            <td>Russian and Ukrainian translations, Russian manual and homepage translation, Slackware package</td>
+        </tr>
     </table>
 
     <h3>Помощники</h3>
     <p>Наша признательность различным меньшим помощникам:</p>
     <ul>
+        <li>Andreas Abraham&nbsp;&nbsp;&nbsp;(German translation)</li>
+        <li>Another&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Yannis Anthymidis&nbsp;&nbsp;&nbsp;(Greek translation)</li>
+        <li>Ash&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Claudio B.&nbsp;&nbsp;&nbsp;(Italian translation)</li>
         <li>Roberto Bardin&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>Thomas Bernhardt&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LotM articles)</li>
         <li>Alain Busser&nbsp;&nbsp;&nbsp;(Дизайн уровней, французский перевод игры и руководства)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Calinou&nbsp;&nbsp;&nbsp;(French translation)</li>
         <li>capkoh&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>daydreamer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Dawid&nbsp;&nbsp;&nbsp;(Polish translation)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Русский перевод)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Edward&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Els van Eijk&nbsp;&nbsp;&nbsp;(Dutch translation)</li>
         <li>Manuel Eisentraut&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Stephanie Fabian&nbsp;&nbsp;&nbsp;(Бесценные сообщения об ошибках)</li>
-        <li>Johann Freymuth&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Johann Freymuth&nbsp;&nbsp;&nbsp;(Дизайн уровней, invaluable bug reports)</li>
+        <li>fri&nbsp;&nbsp;&nbsp;(Czech translation)</li>
+        <li>firespin&nbsp;&nbsp;&nbsp;(Greek translation)</li>
+        <li>Stefan Gagner&nbsp;&nbsp;&nbsp;(Swedish translation)</li>
         <li>Roberto Garc&iacute;a&nbsp;&nbsp;&nbsp;(Испанский перевод)</li>
         <li>Andy Geldmacher&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Edwin Groothuis&nbsp;&nbsp;&nbsp;(Портирование на FreeBSD)</li>
+        <li>GunChleoc&nbsp;&nbsp;&nbsp;(Scottish Gaelic translation)</li>
         <li>Daniel Hadas&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Hairball&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Joe Hansen&nbsp;&nbsp;&nbsp;(Danish translation)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Zoltan Hopp&aacute;r&nbsp;&nbsp;&nbsp;(Hungarian translation)</li>
+        <li>Tea Horvatic&nbsp;&nbsp;&nbsp;(Croatian translation)</li>
         <li>Brian Huffman&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Johannes H&uuml;sing&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Hypocrite&nbsp;&nbsp;&nbsp;(Finnish translation)</li>
+        <li>Icewing&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>M&aacute;t&eacute; Lehel Juh&aacute;sz&nbsp;&nbsp;&nbsp;(Венгерский перевод)</li>
         <li>Samuele Kaplun&nbsp;&nbsp;&nbsp;(Итальянский перевод)</li>
+        <li>Ivica Koli&cacute;&nbsp;&nbsp;&nbsp;(Croatian translation)</li>
         <li>Manuel K&ouml;nig&nbsp;&nbsp;&nbsp;(Дизайн уровней, сообщения об ошибках)</li>
         <li>Jens-Christian Korth&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Johannes Laire&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Joona Laire&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Markus Laire&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Ryan Lerch&nbsp;&nbsp;&nbsp;(AppData file)</li>
+        <li>Christophe Lherieau&nbsp;&nbsp;&nbsp;(French translation)</li>
+        <li>luigif&nbsp;&nbsp;&nbsp;(Italian translation)</li>
         <li>Dominik Lehmann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Dominik Leipold&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Edward Leuf&nbsp;&nbsp;&nbsp;(Отзывы, сообщения об ошибках)</li>
+        <li>Lasse Liehu&nbsp;&nbsp;&nbsp;(Finnish translation)</li>
         <li>Ingo van Lil&nbsp;&nbsp;&nbsp;(Отзывы, сообщения об ошибках)</li>
         <li>Frank van der Loo&nbsp;&nbsp;&nbsp;(Немецкий перевод)</li>
+        <li>&#317;uboslava&nbsp;&nbsp;&nbsp;(Slovak translation)</li>
+        <li>Dzmitry Ludzik&nbsp;&nbsp;&nbsp;(Belorussian and Russian translations)</li>
         <li>Lurcane&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Sidney Markowitz&nbsp;&nbsp;&nbsp;(Портирование на Mac OS X)</li>
+        <li>S&eacute;rgio Marques&nbsp;&nbsp;&nbsp;(Portuguese translation)</li>
         <li>Barry &amp; Lori Mead&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Корректура английских текстов)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Португальский перевод)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Шведский перевод)</li>
+        <li>Nikola Parsifal&nbsp;&nbsp;&nbsp;(Croatian translation)</li>
+        <li>Mark&eacute;ta Pecoldov&aacute;&nbsp;&nbsp;&nbsp;(Czech translation)</li>
         <li>Andreas Persenius&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Grzegorz Pruchniakowski&nbsp;&nbsp;&nbsp;(Polish translation)</li>
         <li>Mark Pulley&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>pzykosiz&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Bruno Queiros&nbsp;&nbsp;&nbsp;(Portuguese translation)</li>
+        <li>Vincenzo Reale&nbsp;&nbsp;&nbsp;(Italian translation)</li>
+        <li>Thomas De Rocker&nbsp;&nbsp;&nbsp;(Dutch translation)</li>
         <li>Rudolf&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Peter Santo&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Tobias Schmidbauer&nbsp;&nbsp;&nbsp;(Мастер установки для Windows и значок)</li>
         <li>Lukas Sch&uuml;ller&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Achim Settelmeier&nbsp;&nbsp;&nbsp;(специальный файл RPM)</li>
-        <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>ShadowPhrogg32642342 (D&aacute;niel Borb&eacute;ly)&nbsp;&nbsp;&nbsp;(Дизайн уровней, Hungarian translation)</li>
+        <li>Gon&ccedil;alo Silva&nbsp;&nbsp;&nbsp;(Portuguese translation)</li>
+        <li>Manuela Silva&nbsp;&nbsp;&nbsp;(Portuguese translation)</li>
         <li>Alex Smith&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Alan Smithee&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Jon Sneyers&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
@@ -161,10 +210,11 @@
         <li>Tacvek&nbsp;&nbsp;&nbsp;(Обновление Lua 5.1)</li>
         <li>James Taylor&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(Файл .desktop)</li>
+        <li>Vince38&nbsp;&nbsp;&nbsp;(French translation)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Страница руководства)</li>
+        <li>Heikki Ylipaavalniemi&nbsp;&nbsp;&nbsp;(Finnish translation)</li>
+        <li>Francisco Zamorano&nbsp;&nbsp;&nbsp;(Spanish translation)</li>
         <li>Zephyr&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>Yuriy Zhyromskiy&nbsp;&nbsp;&nbsp;(Русский перевод руководства и домашней страницы, пакет для Slackware)</li>
-        <li>/dev/null&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
     </ul>
 </div>
