Score evaluation November 2014

--- a/homepage/input/table-wr.html
+++ b/homepage/input/table-wr.html
@@ -1,23 +1,24 @@
   <table>
-    <caption>$$Worldrecord_Statistics$$ $$October$$ 2014</caption>
+    <caption>$$Worldrecord_Statistics$$ $$November$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="80"><col width="80"><col width="120"><col width="80"><col width="120"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$shared$$</th><th>$$difficult$$</th><td>$$alone_shared$$</td><th>$$easy$$</th><td>$$alone_shared$$</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">1340</td><td class="num">146</td><td class="num">1121</td><td class="num">1001 + 120</td><td class="num">219</td><td class="num">193 + 26</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">728</td><td class="num">118</td><td class="num">664</td><td class="num">566 + 98</td><td class="num">64</td><td class="num">44 + 20</td></tr>
-    <tr><td class="left">dev0</td><td class="num">524</td><td class="num">89</td><td class="num">453</td><td class="num">380 + 73</td><td class="num">71</td><td class="num">55 + 16</td></tr>
-    <tr><td class="left">Craven</td><td class="num">148</td><td class="num">20</td><td class="num">139</td><td class="num">123 + 16</td><td class="num">9</td><td class="num">5 + 4</td></tr>
-    <tr><td class="left">Daisy</td><td class="num">90</td><td class="num">45</td><td class="num">74</td><td class="num">39 + 35</td><td class="num">16</td><td class="num">6 + 10</td></tr>
-    <tr><td class="left">Angolino</td><td class="num">81</td><td class="num">71</td><td class="num">63</td><td class="num">8 + 55</td><td class="num">18</td><td class="num">2 + 16</td></tr>
-    <tr><td class="left">Taztunes</td><td class="num">68</td><td class="num">9</td><td class="num">48</td><td class="num">41 + 7</td><td class="num">20</td><td class="num">18 + 2</td></tr>
-    <tr><td class="left">Zecks</td><td class="num">50</td><td class="num">23</td><td class="num">37</td><td class="num">18 + 19</td><td class="num">13</td><td class="num">9 + 4</td></tr>
-    <tr><td class="left">H-J.Epting</td><td class="num">36</td><td class="num">29</td><td class="num">30</td><td class="num">6 + 24</td><td class="num">6</td><td class="num">1 + 5</td></tr>
-    <tr><td class="left">Another</td><td class="num">31</td><td class="num">28</td><td class="num">26</td><td class="num">3 + 23</td><td class="num">5</td><td class="num">0 + 5</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">1353</td><td class="num">142</td><td class="num">1129</td><td class="num">1012 + 117</td><td class="num">224</td><td class="num">199 + 25</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">845</td><td class="num">119</td><td class="num">782</td><td class="num">682 + 100</td><td class="num">63</td><td class="num">44 + 19</td></tr>
+    <tr><td class="left">dev0</td><td class="num">465</td><td class="num">96</td><td class="num">396</td><td class="num">316 + 80</td><td class="num">69</td><td class="num">53 + 16</td></tr>
+    <tr><td class="left">Craven</td><td class="num">110</td><td class="num">20</td><td class="num">100</td><td class="num">84 + 16</td><td class="num">10</td><td class="num">6 + 4</td></tr>
+    <tr><td class="left">Daisy</td><td class="num">88</td><td class="num">45</td><td class="num">72</td><td class="num">37 + 35</td><td class="num">16</td><td class="num">6 + 10</td></tr>
+    <tr><td class="left">Angolino</td><td class="num">80</td><td class="num">71</td><td class="num">62</td><td class="num">7 + 55</td><td class="num">18</td><td class="num">2 + 16</td></tr>
+    <tr><td class="left">Taztunes</td><td class="num">58</td><td class="num">9</td><td class="num">40</td><td class="num">33 + 7</td><td class="num">18</td><td class="num">16 + 2</td></tr>
+    <tr><td class="left">Zecks</td><td class="num">47</td><td class="num">23</td><td class="num">35</td><td class="num">16 + 19</td><td class="num">12</td><td class="num">8 + 4</td></tr>
+    <tr><td class="left">H-J.Epting</td><td class="num">35</td><td class="num">29</td><td class="num">30</td><td class="num">6 + 24</td><td class="num">5</td><td class="num">0 + 5</td></tr>
+    <tr><td class="left">Another</td><td class="num">30</td><td class="num">28</td><td class="num">25</td><td class="num">2 + 23</td><td class="num">5</td><td class="num">0 + 5</td></tr>
     <tr><td class="left">U-Punkt</td><td class="num">14</td><td class="num">3</td><td class="num">9</td><td class="num">6 + 3</td><td class="num">5</td><td class="num">5 + 0</td></tr>
     <tr><td class="left">Ale</td><td class="num">12</td><td class="num">0</td><td class="num">10</td><td class="num">10 + 0</td><td class="num">2</td><td class="num">2 + 0</td></tr>
     <tr><td class="left">Raoul</td><td class="num">10</td><td class="num">3</td><td class="num">9</td><td class="num">6 + 3</td><td class="num">1</td><td class="num">1 + 0</td></tr>
-    <tr><td class="left">hadanie7</td><td class="num">4</td><td class="num">1</td><td class="num">4</td><td class="num">3 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">ais523</td><td class="num">9</td><td class="num">3</td><td class="num">8</td><td class="num">5 + 3</td><td class="num">1</td><td class="num">1 + 0</td></tr>
+    <tr><td class="left">alfix</td><td class="num">7</td><td class="num">7</td><td class="num">7</td><td class="num">0 + 7</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Velstadt</td><td class="num">3</td><td class="num">3</td><td class="num">3</td><td class="num">0 + 3</td><td class="num">0</td><td class="num">0 + 0</td></tr>
+    <tr><td class="left">hadanie7</td><td class="num">2</td><td class="num">1</td><td class="num">2</td><td class="num">1 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Chib</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
-    <tr><td class="left">Valkyrie2</td><td class="num">1</td><td class="num">0</td><td class="num">1</td><td class="num">1 + 0</td><td class="num">0</td><td class="num">0 + 0</td></tr>
     <tr><td class="left">Mark P.</td><td class="num">1</td><td class="num">1</td><td class="num">1</td><td class="num">0 + 1</td><td class="num">0</td><td class="num">0 + 0</td></tr>
   </table>
