--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -1,7 +1,9 @@
 <div class="usernames">
 $$names_in_use$$
   <ul>
+    <li>ais523</li>
     <li>Ale</li>
+    <li>alfix</li>
     <li>Angolino</li>
     <li>Another</li>
     <li>BigSlick</li>
@@ -21,6 +23,7 @@ $$names_in_use$$
     <li>Mnemosyne</li>
     <li>Raoul</li>
     <li>Taztunes</li>
+    <li>the_candyman</li>
     <li>U-Punkt</li>
     <li>Valkyrie2</li>
     <li>Velstadt</li>
