--- a/homepage/input/table-solved.html
+++ b/homepage/input/table-solved.html
@@ -1,29 +1,32 @@
   <table>
-    <caption>$$Solved_Level_Statistics$$ $$October$$ 2014</caption>
+    <caption>$$Solved_Level_Statistics$$ $$November$$ 2014</caption>
     <colgroup><col width="150"><col width="80"><col width="100"><col width="80"><col width="100"><col width="80"></colgroup>
     <tr><th class="left">$$user$$</th><th>$$total$$</th><th>$$difficult$$</th><td>$$difficult_percent$$</td><th>$$easy$$</th><td>$$easy_percent$$</td></tr>
-    <tr><td class="left">dev0</td><td class="num">90.37 %</td><td class="num">2140/2400</td><td class="num">89.17 %</td><td class="num">366/373</td><td class="num">98.12 %</td></tr>
-    <tr><td class="left">Craven</td><td class="num">86.98 %</td><td class="num">2088/2400</td><td class="num">87.00 %</td><td class="num">324/373</td><td class="num">86.86 %</td></tr>
-    <tr><td class="left">daydreamer</td><td class="num">81.00 %</td><td class="num">1914/2400</td><td class="num">79.75 %</td><td class="num">332/373</td><td class="num">89.01 %</td></tr>
+    <tr><td class="left">dev0</td><td class="num">91.60 %</td><td class="num">2174/2400</td><td class="num">90.58 %</td><td class="num">366/373</td><td class="num">98.12 %</td></tr>
+    <tr><td class="left">Craven</td><td class="num">87.63 %</td><td class="num">2101/2400</td><td class="num">87.54 %</td><td class="num">329/373</td><td class="num">88.20 %</td></tr>
+    <tr><td class="left">daydreamer</td><td class="num">83.52 %</td><td class="num">1983/2400</td><td class="num">82.63 %</td><td class="num">333/373</td><td class="num">89.28 %</td></tr>
     <tr><td class="left">Taztunes</td><td class="num">76.13 %</td><td class="num">1766/2400</td><td class="num">73.58 %</td><td class="num">345/373</td><td class="num">92.49 %</td></tr>
     <tr><td class="left">Daisy</td><td class="num">68.66 %</td><td class="num">1681/2400</td><td class="num">70.04 %</td><td class="num">223/373</td><td class="num">59.79 %</td></tr>
-    <tr><td class="left">H-J.Epting</td><td class="num">62.28 %</td><td class="num">1432/2400</td><td class="num">59.67 %</td><td class="num">295/373</td><td class="num">79.09 %</td></tr>
+    <tr><td class="left">H-J.Epting</td><td class="num">64.98 %</td><td class="num">1507/2400</td><td class="num">62.79 %</td><td class="num">295/373</td><td class="num">79.09 %</td></tr>
+    <tr><td class="left">ais523</td><td class="num">58.20 %</td><td class="num">1402/2400</td><td class="num">58.42 %</td><td class="num">212/373</td><td class="num">56.84 %</td></tr>
     <tr><td class="left">gorg</td><td class="num">51.39 %</td><td class="num">1154/2400</td><td class="num">48.08 %</td><td class="num">271/373</td><td class="num">72.65 %</td></tr>
     <tr><td class="left">Ale</td><td class="num">50.23 %</td><td class="num">1097/2400</td><td class="num">45.71 %</td><td class="num">296/373</td><td class="num">79.36 %</td></tr>
     <tr><td class="left">U-Punkt</td><td class="num">50.23 %</td><td class="num">1151/2400</td><td class="num">47.96 %</td><td class="num">242/373</td><td class="num">64.88 %</td></tr>
-    <tr><td class="left">Medimaster</td><td class="num">49.73 %</td><td class="num">1151/2400</td><td class="num">47.96 %</td><td class="num">228/373</td><td class="num">61.13 %</td></tr>
+    <tr><td class="left">Medimaster</td><td class="num">50.09 %</td><td class="num">1158/2400</td><td class="num">48.25 %</td><td class="num">231/373</td><td class="num">61.93 %</td></tr>
     <tr><td class="left">Valkyrie2</td><td class="num">46.63 %</td><td class="num">1253/2400</td><td class="num">52.21 %</td><td class="num">40/373</td><td class="num">10.72 %</td></tr>
     <tr><td class="left">Zecks</td><td class="num">44.90 %</td><td class="num">1024/2400</td><td class="num">42.67 %</td><td class="num">221/373</td><td class="num">59.25 %</td></tr>
     <tr><td class="left">Another</td><td class="num">43.09 %</td><td class="num">1030/2400</td><td class="num">42.92 %</td><td class="num">165/373</td><td class="num">44.24 %</td></tr>
+    <tr><td class="left">maggie</td><td class="num">35.67 %</td><td class="num">689/2400</td><td class="num">28.71 %</td><td class="num">300/373</td><td class="num">80.43 %</td></tr>
     <tr><td class="left">BigSlick</td><td class="num">34.15 %</td><td class="num">795/2400</td><td class="num">33.13 %</td><td class="num">152/373</td><td class="num">40.75 %</td></tr>
     <tr><td class="left">hadanie7</td><td class="num">32.24 %</td><td class="num">794/2400</td><td class="num">33.08 %</td><td class="num">100/373</td><td class="num">26.81 %</td></tr>
-    <tr><td class="left">maggie</td><td class="num">32.02 %</td><td class="num">588/2400</td><td class="num">24.50 %</td><td class="num">300/373</td><td class="num">80.43 %</td></tr>
     <tr><td class="left">Raoul</td><td class="num">30.76 %</td><td class="num">690/2400</td><td class="num">28.75 %</td><td class="num">163/373</td><td class="num">43.70 %</td></tr>
     <tr><td class="left">Mnemosyne</td><td class="num">26.69 %</td><td class="num">610/2400</td><td class="num">25.42 %</td><td class="num">130/373</td><td class="num">34.85 %</td></tr>
     <tr><td class="left">Angolino</td><td class="num">26.14 %</td><td class="num">601/2400</td><td class="num">25.04 %</td><td class="num">124/373</td><td class="num">33.24 %</td></tr>
     <tr><td class="left">Velstadt</td><td class="num">25.46 %</td><td class="num">661/2400</td><td class="num">27.54 %</td><td class="num">45/373</td><td class="num">12.06 %</td></tr>
     <tr><td class="left">Mark P.</td><td class="num">24.34 %</td><td class="num">539/2400</td><td class="num">22.46 %</td><td class="num">136/373</td><td class="num">36.46 %</td></tr>
+    <tr><td class="left">the_candyman</td><td class="num">21.93 %</td><td class="num">581/2400</td><td class="num">24.21 %</td><td class="num">27/373</td><td class="num">7.24 %</td></tr>
     <tr><td class="left">Jens</td><td class="num">18.39 %</td><td class="num">346/2400</td><td class="num">14.42 %</td><td class="num">164/373</td><td class="num">43.97 %</td></tr>
     <tr><td class="left">grimes</td><td class="num">11.07 %</td><td class="num">307/2400</td><td class="num">12.79 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
+    <tr><td class="left">alfix</td><td class="num">8.19 %</td><td class="num">208/2400</td><td class="num">8.67 %</td><td class="num">19/373</td><td class="num">5.09 %</td></tr>
     <tr><td class="left">Chib</td><td class="num">7.83 %</td><td class="num">217/2400</td><td class="num">9.04 %</td><td class="num">0/373</td><td class="num">0.00 %</td></tr>
   </table>
