--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -147,6 +147,7 @@
         <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Hairball&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Joe Hansen&nbsp;&nbsp;&nbsp;(D&auml;nische &Uuml;bersetzung)</li>
+        <li>hasufell&nbsp;&nbsp;&nbsp;(Verbesserte Unterst&uuml;tzung f&uuml;r enet)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Zoltan Hopp&aacute;r&nbsp;&nbsp;&nbsp;(Ungarische &Uuml;bersetzung)</li>
         <li>Tea Horvatic&nbsp;&nbsp;&nbsp;(Kroatische &Uuml;bersetzung)</li>
