--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -147,6 +147,7 @@
         <li>Jonatan Hadas&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Hairball&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Joe Hansen&nbsp;&nbsp;&nbsp;(Danish translation)</li>
+        <li>hasufell&nbsp;&nbsp;&nbsp;(Improved enet support)</li>
         <li>Immanuel Herrmann&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Zoltan Hopp&aacute;r&nbsp;&nbsp;&nbsp;(Hungarian translation)</li>
         <li>Tea Horvatic&nbsp;&nbsp;&nbsp;(Croatian translation)</li>
