Remove a duplicate entry in contributors' list on the homepage.

--- a/homepage/input/credits.html
+++ b/homepage/input/credits.html
@@ -118,7 +118,7 @@
         <li>Roberto Bardin&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Level design)</li>
-        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LotM articles)</li>
+        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(Level design, LotM articles)</li>
         <li>Alain Busser&nbsp;&nbsp;&nbsp;(Level design, French translation, manual)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Level design)</li>
@@ -127,7 +127,6 @@
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Dawid&nbsp;&nbsp;&nbsp;(Polish translation)</li>
-        <li>daydreamer&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Russian and Ukrainian translations)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Level design)</li>
