--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -118,7 +118,7 @@
         <li>Roberto Bardin&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
-        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LdM-Artikel)</li>
+        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(Landschaftsdesign, LdM-Artikel)</li>
         <li>Alain Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign, franz&ouml;sische &Uuml;bersetzung und Handbuch)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -127,7 +127,6 @@
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Dawid&nbsp;&nbsp;&nbsp;(Polnische &Uuml;bersetzung)</li>
-        <li>daydreamer&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Russische und ukrainische &Uuml;bersetzung)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Xerxes M. Dynatos&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
