--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -118,7 +118,7 @@
         <li>Roberto Bardin&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Helge Blohmer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Nathan Bronecke&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(LotM articles)</li>
+        <li>Harry Bruder&nbsp;&nbsp;&nbsp;(Дизайн уровней, LotM articles)</li>
         <li>Alain Busser&nbsp;&nbsp;&nbsp;(Дизайн уровней, французский перевод игры и руководства)</li>
         <li>Guy Busser&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Richi B&uuml;tzer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
@@ -126,7 +126,6 @@
         <li>capkoh&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Manfredi Carta&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Christoph &amp; Anita&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
-        <li>daydreamer&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Dawid&nbsp;&nbsp;&nbsp;(Polish translation)</li>
         <li>Serge Dremuk&nbsp;&nbsp;&nbsp;(Русский перевод)</li>
         <li>Joseph Dunne&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
