Score evaluation December 2014

--- a/homepage/input/userlist.html
+++ b/homepage/input/userlist.html
@@ -13,10 +13,12 @@ $$names_in_use$$
     <li>daydreamer</li>
     <li>dev0</li>
     <li>gorg</li>
+    <li>gpc</li>
     <li>grimes</li>
     <li>H-J.Epting</li>
     <li>hadanie7</li>
     <li>Jens</li>
+    <li>Kejvi</li>
     <li>maggie</li>
     <li>Mark P.</li>
     <li>Medimaster</li>
