Update screenshot page

--- a/homepage/input/screenshots.html
+++ b/homepage/input/screenshots.html
@@ -1,6 +1,17 @@
 <div class="screenshot">
 <h2>Screenshots</h2>
 
+<h3 id="v1.21">Version 1.21</h3>
+
+<a href="$$imagedir$$/screenshots/andreas66_1.png"><img src="$$imagedir$$/screenshots/andreas66_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/devnull131_1.png"><img src="$$imagedir$$/screenshots/devnull131_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/devnull167_1.png"><img src="$$imagedir$$/screenshots/devnull167_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/devnull169_1.png"><img src="$$imagedir$$/screenshots/devnull169_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/duffy187_2.png"><img src="$$imagedir$$/screenshots/duffy187_2_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/mecke42_1.png"><img src="$$imagedir$$/screenshots/mecke42_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/mecke43_1.png"><img src="$$imagedir$$/screenshots/mecke43_1_s.png" alt="Levelscreenshot"></a>
+<a href="$$imagedir$$/screenshots/nanook02_1.png"><img src="$$imagedir$$/screenshots/nanook02_1_s.png" alt="Levelscreenshot"></a>
+
 <h3 id="v1.20">Version 1.20</h3>
 
 <a href="$$imagedir$$/screenshots/ral15_1.png"><img src="$$imagedir$$/screenshots/ral15_1_s.png" alt="Levelscreenshot"></a>
