Add three more contributors to the homepage.
Includes two new authors and one translator from 0.92, see previous commit.

--- a/homepage/input/credits.html
+++ b/homepage/input/credits.html
@@ -111,6 +111,7 @@
     <p>For various minor contributions, thanks go to:</p>
     <ul>
         <li>Andreas Abraham&nbsp;&nbsp;&nbsp;(German translation)</li>
+        <li>Samuel El&iacute;as Mart&iacute;nez &Aacute;lvarez&nbsp;&nbsp;&nbsp;(Spanish translation for 0.92)</li>
         <li>Another&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Yannis Anthymidis&nbsp;&nbsp;&nbsp;(Greek translation)</li>
         <li>Ash&nbsp;&nbsp;&nbsp;(Level design)</li>
@@ -180,6 +181,7 @@
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(English proof reading)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>nanook&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Portuguese translation)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Swedish translation)</li>
         <li>Nikola Parsifal&nbsp;&nbsp;&nbsp;(Croatian translation)</li>
@@ -212,6 +214,7 @@
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(.desktop file)</li>
         <li>Vince38&nbsp;&nbsp;&nbsp;(French translation)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Level design)</li>
+        <li>Martin Woyda-Wolf&nbsp;&nbsp;&nbsp;(Level design)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Manual page)</li>
         <li>Heikki Ylipaavalniemi&nbsp;&nbsp;&nbsp;(Finnish translation)</li>
         <li>Francisco Zamorano&nbsp;&nbsp;&nbsp;(Spanish translation)</li>
