--- a/homepage/input/credits_de.html
+++ b/homepage/input/credits_de.html
@@ -111,6 +111,7 @@
     <p>F&uuml;r verschiedene kleinere Beitr&auml;ge danken wir:</p>
     <ul>
         <li>Andreas Abraham&nbsp;&nbsp;&nbsp;(Deutsche &Uuml;bersetzung)</li>
+        <li>Samuel El&iacute;as Mart&iacute;nez &Aacute;lvarez&nbsp;&nbsp;&nbsp;(Spanische &Uuml;bersetzung f&uuml;r 0.92)</li>
         <li>Another&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Yannis Anthymidis&nbsp;&nbsp;&nbsp;(Griechische &Uuml;bersetzung)</li>
         <li>Ash&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
@@ -180,6 +181,7 @@
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Englisch Korrektur lesen)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>nanook&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Portugiesische &Uuml;bersetzung)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Schwedische &Uuml;bersetzung)</li>
         <li>Nikola Parsifal&nbsp;&nbsp;&nbsp;(Kroatische &Uuml;bersetzung)</li>
@@ -212,6 +214,7 @@
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(.desktop file)</li>
         <li>Vince38&nbsp;&nbsp;&nbsp;(Franz&ouml;sische &Uuml;bersetzung)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
+        <li>Martin Woyda-Wolf&nbsp;&nbsp;&nbsp;(Landschaftsdesign)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Manual page f&uuml;r Unix)
         <li>Heikki Ylipaavalniemi&nbsp;&nbsp;&nbsp;(Finnische &Uuml;bersetzung)</li>
         <li>Francisco Zamorano&nbsp;&nbsp;&nbsp;(Spanische &Uuml;bersetzung)</li>
