--- a/homepage/input/credits_ru.html
+++ b/homepage/input/credits_ru.html
@@ -111,6 +111,7 @@
     <p>Наша признательность различным меньшим помощникам:</p>
     <ul>
         <li>Andreas Abraham&nbsp;&nbsp;&nbsp;(German translation)</li>
+        <li>Samuel El&iacute;as Mart&iacute;nez &Aacute;lvarez&nbsp;&nbsp;&nbsp;(Spanish translation for 0.92)</li>
         <li>Another&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Yannis Anthymidis&nbsp;&nbsp;&nbsp;(Greek translation)</li>
         <li>Ash&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
@@ -180,6 +181,7 @@
         <li>Linda Mihalic&nbsp;&nbsp;&nbsp;(Корректура английских текстов)</li>
         <li>moonpearl&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Stephen Morley (Safalra)&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>nanook&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Krishnamurti Lelis Lima Vieira Nunes&nbsp;&nbsp;&nbsp;(Португальский перевод)</li>
         <li>Daniel Nylander&nbsp;&nbsp;&nbsp;(Шведский перевод)</li>
         <li>Nikola Parsifal&nbsp;&nbsp;&nbsp;(Croatian translation)</li>
@@ -212,6 +214,7 @@
         <li>Michael Terry&nbsp;&nbsp;&nbsp;(Файл .desktop)</li>
         <li>Vince38&nbsp;&nbsp;&nbsp;(French translation)</li>
         <li>Ray Wick&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
+        <li>Martin Woyda-Wolf&nbsp;&nbsp;&nbsp;(Дизайн уровней)</li>
         <li>Joe Wreschnig&nbsp;&nbsp;&nbsp;(Страница руководства)</li>
         <li>Heikki Ylipaavalniemi&nbsp;&nbsp;&nbsp;(Finnish translation)</li>
         <li>Francisco Zamorano&nbsp;&nbsp;&nbsp;(Spanish translation)</li>
